ecmascript/parser/tests/test262-error-references/fail/17904d9a6b6ec31b.js.stderr
error: Unexpected token `.`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/17904d9a6b6ec31b.js:1:3
  |
1 | f(..a)
  |   ^

